# austlii-legal-assistant

./: .gitignore  PROJECT_CHALLENGES.md  README.md  pyproject.toml
app/: app.py
scripts/: data_preperation.py  ingest_rag_files.py  lora_inference.py  train_lora.py
